--- a/example/templates/shop/base.html
+++ b/example/templates/shop/base.html
@@ -48,9 +48,7 @@
       <div class="span3">
         <div class="center">
           <a href="/"><img id="logo" src="{{MEDIA_URL}}image/logo.png"></a>
-          <a  href="http://facebook.com/shopdisenomx">
-          <img style="margin-top:120px; margin-left:10px; height:15px;" src="http://i.imgur.com/ksHgG2A.png">
-          </a>
+         
         </div>
       </div>
       <div class="span7">
@@ -59,23 +57,23 @@
         </ul>
         
       </div>
-      <div class="span2" style="padding-top:15px;">
+      <div class="span2" style="padding-top:50px;">
         
-        <div class="palette palette-clouds">
-          <a href="{% url 'cart' %}">
-          Tu carrito
+        <div class="">
+          <a href="{% url 'cart' %}" class="btn btn-medium btn-info">
+          <i class=" icon icon-shopping-cart icon-white icon-large"></i> Tu carrito
           </a>
           <br />
         </div>
         {% if user.is_authenticated %}
-        <div class="palette palette-asbestos">
+        <div class="">
           {% trans "Hello" %} {{ user }}<br>
           <a href="{% url 'order_list' %}">{% trans "Tus ordenes" %}</a>
           </br>
           <a href="{% url 'auth_logout' %}"> Salir </a>
         </div>
         {% else%}
-        <div class="palette palette-silver">
+        <div class="">
           <a href="{% url 'registration_register' %}">Registro</a> |
           <a href="{% url 'auth_login' %}">Acceder</a>
         </div>
