--- a/example/templates/shop/base.html
+++ b/example/templates/shop/base.html
@@ -162,10 +162,10 @@
       <div class="spaceup">
         <h3>Contacto</h3>
         
-        <p style="color: #ff0000;">CEO. Mónica A. Aguilar Gomez</p>
+        <p style="color: #ff0000;">CEO. Mónica A. Aguilar Gómez</p>
         <p>
-          tel: 55234290<br/>
-          Peten 310,Narvate<br/>
+          
+         
           México, Distrito Federal.<br/>
 
         </p>
