--- a/example/templates/shop/base.html
+++ b/example/templates/shop/base.html
@@ -46,7 +46,7 @@
     {% block body %}
     <div class="row-fluid menu ">
       <div class="span3">
-        <div class="center">
+        <div class="center padding-logo">
           <a href="/"><img id="logo" src="{{MEDIA_URL}}image/logo.png"></a>
          
         </div>
