--- a/example/templates/shop/product_list.html
+++ b/example/templates/shop/product_list.html
@@ -25,7 +25,7 @@
     </div>
 
     {% if manufacture %}
-    <img id="image-src" src="{{manufacture.bg_image.url}}" class="hide">
+    
       <div class="row-fluid center">
            <img src="{% thumbnail manufacture.image 200x200 %}"/>
       </div>
@@ -33,6 +33,9 @@
 
 
     <div class="row-fluid" id="bg">
+      {% if manufacture %}
+      <img id="image-src" src="{{manufacture.bg_image.url}}" class="hide">
+      {% endif %}
       {% for object in object_list %}      
       <div class="span3"  {%if forloop.counter0|divisibleby:"4"%} style="margin-left:0px;" {%endif%}>
         <div class="{% if category%}manufacture{%else%}product{%endif%}-list">
