--- a/example/templates/shop/base.html
+++ b/example/templates/shop/base.html
@@ -57,7 +57,8 @@
         </ul>
         
       </div>
-      <div class="span2" style="padding-top:50px;">
+      <div class="span2">
+	<div style="padding-top:50px;">
         
         <div class="">
           <a href="{% url 'cart' %}" class="btn btn-medium btn-info">
@@ -78,7 +79,7 @@
           <a href="{% url 'auth_login' %}">Acceder</a>
         </div>
         {% endif %}
-        
+        </div>
       </div>
     </div>
   </div>
