--- a/example/templates/shop/product_detail.html
+++ b/example/templates/shop/product_detail.html
@@ -126,7 +126,7 @@ img.show();
         {% endwith %}
         <input type="hidden" name="add_item_id" value="{{object.pk}}">
         <input type="hidden" name="add_item_quantity" value="1">
-        <input type="submit" class="btn btn-large btn-block spaceup" value="Add to cart">
+        <input type="submit" class="btn btn-large btn-block spaceup" value="Agregar al carrito">
       </form>
     </div>
   </div>
