--- a/example/myshop/templates/myshop/example_payment.html
+++ b/example/myshop/templates/myshop/example_payment.html
@@ -1,8 +1,30 @@
+{% extends "shop/base.html" %}
+{% load i18n %}
 {% load shop_tags %}
-<h1>Example payment backend</h1>
-{% order order %}
+
+{% block content %}
+
+
+<div class="container-fluid graycontainer">
+	<div class="well">
+		<h1>{{object}}</h1>
+		
+	</div>
+	<div class="row-fluid">
+		<div class="offset2 span8 square spacedown">
+			  {% order order %}
 <p>Press next to continue</p>
 <form action="" method="post">
     {% csrf_token %}
-    <input type="submit" value="Next" />
+    <input type="submit" value="Next"  class="btn btn-block btn-primary"/>
 </form>
+		</div>
+	</div>
+</div>
+
+
+{% endblock %}
+
+
+
+
