--- a/example/templates/shop/checkout/selection.html
+++ b/example/templates/shop/checkout/selection.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="row-fluid">
   <div class="well">
-    <h1>Shipping and Billing</h1>
+    <h1>Pago y Envío</h1>
   </div>
 </div>
 
@@ -11,19 +11,23 @@
     {% csrf_token %}
 <div class="row-fluid">
 
-    <div class="span4">
-      <h3>Your shipping address</h3>
+    <div class="span4 offset2">
+      <h3>Dirección de envío.</h3>
       {{ shipping_address.as_p }}
     </div>
+    {% comment %}
+      
+    
     <div class="span4">
-      <h3>Your billing address</h3>
+      <h3>Dirección del pago.</h3>
       {{ billing_address.as_p }}
     </div>
+    {% endcomment %}
     <div class="span4">
-      <h3>Payment and Shipping Methods</h3>
+      <h3>Métodos de pago y envío.</h3>
       {{ billing_shipping_form.as_p }}
       
-      <h3>Extra info</h3>
+      <h3>Informacón extra.</h3>
       {{ extra_info_form.as_p }}
   
     </div>
