--- a/example/templates/shop/base.html
+++ b/example/templates/shop/base.html
@@ -66,7 +66,7 @@
 	<div style="padding-top:50px;">
         
         <div class="">
-          <a href="{% url 'cart' %}" class="btn btn-medium btn-info">
+          <a href="{% url 'cart' %}" class="btn btn-medium btn-info btn-large">
           <i class=" icon icon-shopping-cart icon-white icon-large"></i> Tu carrito
           </a>
           <br />
