--- a/example/media/ui.css
+++ b/example/media/ui.css
@@ -373,3 +373,11 @@ filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endCo
 /* For IE 8*/
 -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000)";
 }
+
+
+@media (max-width: 767px) {
+  body {
+    padding-right: 0px;
+    padding-left: 0px;
+  }
+}
