--- a/example/media/ui.css
+++ b/example/media/ui.css
@@ -99,6 +99,9 @@ padding-top: 10px;
 
 
 @media screen and (max-width: 600px) {
+  .menu .span2 {
+    height: 200px;
+  }
   #logo {
   height: 200px;
 }
